# code-review-system

./: README.md  code_review.db-shm  code_review.db-wal  docker-compose.yml  pyproject.toml
backend/: main.py
backend/agents/: base_agent.py  bug_agent.py  coverage_agent.py  security_agent.py
backend/ingestion/: code_chunker.py  embedder.py  git_loader.py
backend/orchestrator/: graph.py  state.py  synthesizer.py
backend/report/: formatter.py  scorer.py
backend/routes/: findings.py  reports.py  review.py
docs/: agents.md  api.md  architecture.md  scoring.md  setup.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
reports/: 105125f1-2d94-4e5e-9f1c-44473b353e39.json  105125f1-2d94-4e5e-9f1c-44473b353e39.md  17c8f744-6019-4c8f-9725-22cbf976a966.json  17c8f744-6019-4c8f-9725-22cbf976a966.md  459b975c-e480-432e-9dfb-e271e8a9ea39.json  459b975c-e480-432e-9dfb-e271e8a9ea39.md  641ec4ae-a546-427d-a427-83c832cf22be.json  641ec4ae-a546-427d-a427-83c832cf22be.md  9886041b-6922-4f50-a1e8-a5cd00a0171e.json  9886041b-6922-4f50-a1e8-a5cd00a0171e.md  a56b0d5a-4507-4556-b925-587af4d061b1.json  a56b0d5a-4507-4556-b925-587af4d061b1.md  ac43d020-ef91-4d00-85f9-4313e62b5f2c.json  ac43d020-ef91-4d00-85f9-4313e62b5f2c.md  aef207fa-bb45-4382-a74c-b3fe1324f62b.json  aef207fa-bb45-4382-a74c-b3fe1324f62b.md  b8adac2c-aae7-4022-b432-5a5fb599c2a5.json  b8adac2c-aae7-4022-b432-5a5fb599c2a5.md  bd991f41-363d-4996-aa14-69c47f043969.json  bd991f41-363d-4996-aa14-69c47f043969.md  d923e1c7-d995-4b20-9f37-5f7b1dd1f3ef.json  d923e1c7-d995-4b20-9f37-5f7b1dd1f3ef.md
(+26 files in other folders)
