[project]
name = "code-review-system"
version = "0.1.0"
description = "Multi-agent AI code review system"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.0",
    "langchain>=0.3.25,<0.4",
    "langchain-openai>=0.2.14,<0.3",
    "langchain-core>=0.3.63,<0.4",
    "langchain-community>=0.3.0,<0.4",
    "langgraph>=0.2.68,<0.3",
    "aiofiles>=24.0.0",
    "llama-index>=0.11.0",
    "llama-index-readers-file>=0.2.0",
    "llama-index-embeddings-openai>=0.2.0",
    "pinecone-client>=5.0.0",
    "openai>=1.50.0",
    "sqlmodel>=0.0.21",
    "aiosqlite>=0.20.0",
    "gitpython>=3.1.43",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "httpx>=0.27.0",
    "websockets>=13.0",
    "mcp>=1.0.0",
    "pip-audit>=2.7.0",
    "markdown>=3.7",
    "weasyprint>=62.0",
    "python-multipart>=0.0.12",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "mypy>=1.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
